--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/assetic-bundle": "^2.8",
         "vich/uploader-bundle": "^1.5",
         "liip/imagine-bundle": "^1.7",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "mykees/symfony2-tag-bundle": "1.0.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
